[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../arch/" }
async_utils = { path = "../crates/async_utils/" }
config = { path = "../config/" }
sync = { path = "../modules/sync/" }
memory = { path = "../modules/memory/" }
systype = { path = "../modules/systype/" }
device-core = { path = "../modules/device-core/" }

bitflags = "2.5"
rustversion = "1.0"
log = "0.4"
spin = { version = "0.9", features = ["lazy"] }
virtio-drivers = { version = "0.7" }
async-trait = "0.1"
fdt = "0.1"
plic = "0.0.2"
ringbuffer = "0.15"
