[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../arch/" }
config = { path = "../config/" }
sync = { path = "../modules/sync/" }
memory = { path = "../modules/memory/" }
systype = { path = "../modules/systype/" }
page = { path = "../modules/page/" }
device-core = { path = "../modules/device-core/" }
net = { path = "../modules/net/" }
sbi-print = { path = "../crates/sbi-print/" }
ring-buffer = { path = "../crates/ring-buffer/" }
async-utils = { path = "../crates/async-utils/" }
macro-utils = { path = "../crates/macro-utils/" }
backtrace = { path = "../crates/backtrace/" }

bitflags = "2.5"
rustversion = "1.0"
log = "0.4"
spin = { version = "0.9", features = ["lazy"] }
virtio-drivers = { version = "0.7" }
# virtio-drivers = { path = "../crates/virtio-drivers/" }
async-trait = "0.1"
fdt = "0.1"
plic = "0.0.2"
crate_interface = "0.1"
paste = "1.0"
bitfield-struct = "0.8"
byte-slice-cast = { version = "1.2.2", default-features = false }
embedded-sdmmc = "0.8"
embedded-hal = "1.0"

# visionfive2-sd = { path = "../crates/visionfive2-sd/" }
visionfive2-sd = { git = "https://github.com/os-module/visionfive2-sd.git" }

[features]
loopback = [] # 配置使用本地回环设备简化 or Virtio-net设备
