[package]
name = "kernel"
version = "0.1.0"
authors = ["ChenRuiwei <1982833213@qq.com>"]
edition = "2021"

[dependencies]
arch = { path = "../arch/" }
config = { path = "../config/" }
sync = { path = "../modules/sync/" }
signal = { path = "../modules/signal/" }
driver = { path = "../driver/" }
logging = { path = "../modules/logging/" }
executor = { path = "../modules/executor/" }
systype = { path = "../modules/systype/" }
memory = { path = "../modules/memory/" }
async_utils = { path = "../modules/async_utils/" }
vfs = { path = "../modules/vfs/" }
vfs-core = { path = "../modules/vfs-core/" }
irq_count = { path = "../crates/irq_count/" }
recycle_allocator = { path = "../crates/recycle_allocator/" }
time = { path = "../modules/time/" }
timer = { path = "../modules/timer/" }
futex = { path = "../modules/futex/" }

cfg-if = "1.0"
crate_interface = "0.1"
buddy_system_allocator = "0.9"
bitflags = "2.5"
bit_field = "0.10"
xmas-elf = "0.9"
log = "0.4"
hashbrown = "0.14"
spin = { version = "0.9", features = ["lazy"] }
riscv = "0.11"
virtio-drivers = { version = "0.7" }
paste = "1.0"


[build-dependencies]
config = { path = "../config" }

[features]
strace = []
smp = []
