[package]
name = "kernel"
version = "0.1.0"
authors = ["ChenRuiwei <1982833213@qq.com>"]
edition = "2021"

[dependencies]
arch = { path = "../arch/" }
config = { path = "../config/" }
sync = { path = "../modules/sync/" }
signal = { path = "../modules/signal/" }
driver = { path = "../driver/" }
logging = { path = "../modules/logging/" }
executor = { path = "../modules/executor/" }
systype = { path = "../modules/systype/" }
memory = { path = "../modules/memory/" }
vfs = { path = "../modules/vfs/" }
vfs-core = { path = "../modules/vfs-core/" }
time = { path = "../modules/time/" }
timer = { path = "../modules/timer/" }
page = { path = "../modules/page/" }
net = { path = "../modules/net/" }
recycle-allocator = { path = "../crates/recycle-allocator/" }
async-utils = { path = "../crates/async-utils/" }
sbi-print = { path = "../crates/sbi-print/" }
backtrace = { path = "../crates/backtrace/" }

cfg-if = "1.0"
crate_interface = "0.1"
buddy_system_allocator = "0.9"
bitflags = "2.5"
bit_field = "0.10"
xmas-elf = "0.9"
log = "0.4"
hashbrown = "0.14"
spin = { version = "0.9", features = ["lazy"] }
riscv = "0.11"
virtio-drivers = { version = "0.7" }
paste = "1.0"
strum = { version = "0.26", default_features = false, features = ["derive"] }
numeric-enum-macro = "0.2.0"
async-trait = "0.1"
downcast-rs = { version = "1.2", default-features = false }


[build-dependencies]
config = { path = "../config" }


[features]
strace = []
smp = []
preempt = []
debug = []
