[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../../arch/" }
config = { path = "../../config/" }
device-core = { path = "../device-core/" }
sync = { path = "../sync/" }
memory = { path = "../memory/" }
systype = { path = "../systype/" }

log = "0.4"
spin = { version = "0.9", features = ["lazy"] }
virtio-drivers = { version = "0.7" }
uart_16550 = "0.3"
lru = "0.12"
