[package]
name = "fat32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs-core = { path = "../vfs-core/" }
device-core = { path = "../device-core/" }
sync = { path = "../sync/" }
arch = { path = "../../arch/" }
systype = { path = "../systype/" }

log = "0.4"
fatfs = { git = "https://github.com/ChenRuiwei/rust-fatfs", branch = "smp", default-features = false, features = [
    "alloc",
    "lfn",
    "log_level_info",
] }
downcast-rs = { version = "1.2", default-features = false }
async-trait = "0.1"
