[package]
name = "memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../config/" }
sync = { path = "../sync/" }
arch = { path = "../../arch" }
buddy_system_allocator = "0.9"
linked_list_allocator = "0.10"
bitflags = "2.5"
log = "0.4"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", version = "0.1.0" }

[features]
default = ["buddy"]
buddy = []
linked = []
