[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
smoltcp = []
default = ["smoltcp"]

[dependencies]
systype = { path = "../systype/" }
sync = { path = "../sync/" }
driver = { path = "../../driver" }
spin = "0.9.8"
log = "0.4"

[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
rev = "2ade274"
default-features = false
features = [
    "alloc",
    "log",             # no std
    "medium-ethernet",
    "proto-ipv4",
    "socket-raw",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "socket-dns",
    # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
    # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
    # "assembler-max-segment-count-32",
]
