[package]
name = "page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../../config/" }
systype = { path = "../systype/" }
sync = { path = "../sync/" }
memory = { path = "../memory/" }
device-core = { path = "../device-core/" }

log = "0.4"
lru = "0.12"
spin = "0.9"
intrusive-collections = "0.9"
enum-as-inner = "0.6"
