[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sync = { path = "../sync/" }
arch = { path = "../../arch" }
time = { path = "../time" }

log = "0.4"
spin = { version = "0.9", features = ["lazy"] }
