[package]
name = "vfs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systype = { path = "../systype/" }
sync = { path = "../sync/" }
memory = { path = "../memory/" }
config = { path = "../../config/" }
device-core = { path = "../device-core/" }
page = { path = "../page/" }
driver = { path = "../../driver/" }
time = { path = "../time" }
async-utils = { path = "../../crates/async-utils/" }

crate_interface = "0.1"
bitflags = "2.5"
log = "0.4"
async-trait = "0.1"
spin = "0.9"
lru = "0.12"
ahash = { version = "0.8", default-features = false }
hashbrown = "0.14"
downcast-rs = { version = "1.2", default-features = false }
intrusive-collections = "0.9"
