[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs-core = { path = "../vfs-core/" }
fat32 = { path = "../fat32/" }
sync = { path = "../sync/" }
driver = { path = "../../driver/" }
config = { path = "../../config/" }
systype = { path = "../systype/" }
async_utils = { path = "../async_utils/" }

spin = "0.9"
log = "0.4"
ringbuffer = "0.15"
async-trait = "0.1"
strum = { version = "0.26", default_features = false, features = ["derive"] }
