[package]
name = "vfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs-core = { path = "../vfs-core/" }
fat32 = { path = "../fat32/" }
page = { path = "../page/" }
ext4 = { path = "../ext4/" }
sync = { path = "../sync/" }
driver = { path = "../../driver/" }
device-core = { path = "../device-core/" }
config = { path = "../../config/" }
systype = { path = "../systype/" }
async-utils = { path = "../../crates/async-utils/" }
ring-buffer = { path = "../../crates/ring-buffer/" }
memory = { path = "../memory/" }

bitflags = "2.5"
async-trait = "0.1"
strum = { version = "0.26", default_features = false, features = ["derive"] }
spin = "0.9"
log = "0.4"
crate_interface = "0.1"
